# tng_be

./: .gitignore  .ruff.toml  README.md  pyproject.toml  setup.cfg  tox.ini  tox_ci.sh
.github/workflows/: tox.yml
tests/: .coveragerc  test_direction.py  test_fsm.py  test_game_factory.py  test_moves.py  test_tile.py
tng/game/: exc.py  factory.py  fsm.py  game.py  monsters.py  moves.py  types.py
tools/: print_game.py  sample_match.py
