[metadata]
name = tng_be
version = attr:tng.VERSION
description = TNG backend
long_description = file: README.md
author = Simone Pierazzini
author_email = makeroo@gmail.com
url = https://github.com/makeroo/tng_be.git
license =
platforms = any
classifiers =
    Development Status :: 1
    Programming Language :: Python 3

[options]
packages = find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    pydantic >= 2.4.2

[options.entry_points]
console_scripts =
    tng-be=tng.be.app:main
